// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family E — stale / partial > E1 — stale managed pi (old version) > current strategies resolve without version gating (darwin) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family E — stale / partial > E1 — stale managed pi (old version) > current strategies resolve without version gating (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family E — stale / partial > E1 — stale managed pi (old version) > current strategies resolve without version gating (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @earendil-works/pi-coding-agent/package.json
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@earendil-works/pi-coding-agent/dist/cli.js
  managed      ok"
`;

exports[`Family E — stale / partial > E2 — partial managed install (package.json, no dist) > strategy skips when entry file absent (linux) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family E — stale / partial > E2 — partial managed install (package.json, no dist) > strategy skips when entry file absent (win32) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  bare-import  cannot resolve @earendil-works/pi-coding-agent/package.json
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@earendil-works/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@earendil-works/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi.cmd
  where        not found on PATH"
`;
